Fixed a few smaller issues with the helper script.

--- a/scripts/core_binding_gen_helper_util.ipynb
+++ b/scripts/core_binding_gen_helper_util.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c657926f",
+   "execution_count": null,
+   "id": "e2b44aa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "175bc029",
+   "execution_count": null,
+   "id": "d67b4db8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,29 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ddbd7a11",
+   "execution_count": null,
+   "id": "b64d9962",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'asdsd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtransform_input\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mglobals\u001b[39m():\n\u001b[1;32m      2\u001b[0m     b\u001b[38;5;241m.\u001b[39mon_click(transform_input, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m----> 3\u001b[0m     \u001b[43masdsd\u001b[49m()\n\u001b[1;32m      5\u001b[0m class_remaps \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvoid\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvoid\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVariant\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpandemonium_variant\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPoolColorArray\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpandemonium_pool_color_array\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     45\u001b[0m }\n\u001b[1;32m     47\u001b[0m class_c_no_force_ptr \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbool\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mint\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreal_t\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     51\u001b[0m }\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'asdsd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if 'transform_input' in globals():\n",
     "    b.on_click(transform_input, True)\n",
     "\n",
     "class_remaps = {\n",
+    "    '': '',\n",
     "    'void': 'void',\n",
     "    'Variant': 'pandemonium_variant',\n",
     "    'bool': 'pandemonium_bool',\n",
@@ -371,7 +360,8 @@
     "        s += ');\\n'\n",
     "    \n",
     "        if self.cpp_return_type != 'void':\n",
-    "            s += '\\treturn dest;\\n'\n",
+    "            if return_needs_conversion:\n",
+    "                s += '\\treturn dest;\\n'\n",
     "    \n",
     "        s += '}'\n",
     "        \n",
@@ -440,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3060f92f",
+   "id": "8af52393",
    "metadata": {},
    "source": [
     "# Input"
@@ -449,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b472401",
+   "id": "5ceb77b1",
    "metadata": {
     "scrolled": true
    },
@@ -460,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89053f5a",
+   "id": "e8906dca",
    "metadata": {},
    "source": [
     "# Output"
@@ -469,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a7057b5",
+   "id": "765825e3",
    "metadata": {
     "scrolled": false
    },
@@ -480,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37dfae8d",
+   "id": "d3c2bd5c",
    "metadata": {},
    "source": [
     " "
@@ -488,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d86d6156",
+   "id": "dd02c021",
    "metadata": {},
    "source": [
     " "
