Small improvements to the helper tool.

--- a/scripts/core_binding_gen_helper_util.ipynb
+++ b/scripts/core_binding_gen_helper_util.ipynb
@@ -54,9 +54,13 @@
     "class_remaps = {\n",
     "    '': '',\n",
     "    'void': 'void',\n",
+    "    'CharType': 'pandemonium_char_type',\n",
     "    'Variant': 'pandemonium_variant',\n",
     "    'bool': 'pandemonium_bool',\n",
+    "    'char': 'char',\n",
     "    'int': 'pandemonium_int',\n",
+    "    'uint32_t': 'uint32_t',\n",
+    "    'uint64_t': 'uint64_t',\n",
     "    'real_t': 'pandemonium_real',\n",
     "    'float': 'pandemonium_real',\n",
     "    'double': 'pandemonium_real',\n",
@@ -74,7 +78,7 @@
     "    'AABB': 'pandemonium_aabb',\n",
     "    'Basis': 'pandemonium_basis',\n",
     "    'Transform': 'pandemonium_transform',\n",
-    "    'Transform2d': 'pandemonium_transform2d',\n",
+    "    'Transform2D': 'pandemonium_transform2d',\n",
     "    'Projection': 'pandemonium_projection',\n",
     "    'Color': 'pandemonium_color',\n",
     "    'NodePath': 'pandemonium_node_path',\n",
@@ -94,6 +98,8 @@
     "    'PoolVector4Array': 'pandemonium_pool_vector4_array',\n",
     "    'PoolVector4iArray': 'pandemonium_pool_vector4i_array',\n",
     "    'PoolColorArray': 'pandemonium_pool_color_array',\n",
+    "    'CharString': 'pandemonium_char_string',\n",
+    "    'Char16String': 'pandemonium_char_16_string',\n",
     "}\n",
     "\n",
     "class_c_no_force_ptr = {\n",
