Small improvements to the helper script.

--- a/scripts/core_binding_gen_helper_util.ipynb
+++ b/scripts/core_binding_gen_helper_util.ipynb
@@ -53,12 +53,15 @@
     "\n",
     "class_remaps = {\n",
     "    '': '',\n",
+    "    'Error': 'pandemonium_error',\n",
     "    'void': 'void',\n",
     "    'CharType': 'pandemonium_char_type',\n",
     "    'Variant': 'pandemonium_variant',\n",
     "    'bool': 'pandemonium_bool',\n",
     "    'char': 'char',\n",
     "    'int': 'pandemonium_int',\n",
+    "    'int32_t': 'int32_t',\n",
+    "    'int64_t': 'int64_t',\n",
     "    'uint32_t': 'uint32_t',\n",
     "    'uint64_t': 'uint64_t',\n",
     "    'real_t': 'pandemonium_real',\n",
@@ -108,6 +111,11 @@
     "    'real_t': True,\n",
     "    'float': True,\n",
     "    'double': True,\n",
+    "    'int32_t': True,\n",
+    "    'int64_t': True,\n",
+    "    'uint32_t': True,\n",
+    "    'uint64_t': True,\n",
+    "    'Error': True,\n",
     "}\n",
     "\n",
     "METHOD_ARG_TYPE_NONE = 0\n",
